--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --font-geist-sans: 'Geist Sans', sans-serif;
+    --font-geist-mono: 'Geist Mono', monospace;
+  }
+  
+  body {
+    font-family: var(--font-geist-sans);
+  }
