--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -11,13 +11,16 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --font-geist-sans: 'Geist Sans', sans-serif;
+    --font-geist-mono: 'Geist Mono', monospace;
   }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif ;
+  font-family: var(--font-geist-sans);
 }
 
 @layer utilities {
